  which are Dirac Distributions, .finSupport was not returned of length 2 
  (as needed), 
+ fixed a glitch in "+"("DiscreteDistribution","DiscreteDistribution") as 
  spotted by christoph.dalitz@hs-niederrhein.de
+ fixed some documentation glitches in internal .Rd files as noted in a mail
  by K. Hornik, Dec, 15, 2023, with some helpful hints by Michael Lawrence
  in a mail Dec, 19, 2023

##############
v 2.9.2
##############
under the hood:
+ included pkg RobAStBase into "Enhances" in the DESCRIPTION file
+ moved some code in the help to RtoDPQ.d relying on the RNG into IGNORE_RDIFF 
+ transformed CITATION file to new format, i.e., bibentry() instead of citEntry(),
        c(as.person( .... ), as.person( .... ), ...), instead of 
		as.personList(....) 
+ converted encoding to UTF-8

##############
v 2.9
##############

user-visible CHANGES:
+ replaced obsolete URLs to JSS papers by respective DOIs
  
bug fixes
+ fixed a glitch in catching argument names in bAcDcLcDistribution.R 
  detected by Elio Campitelli <elio.campitelli@cima.fcen.uba.ar>
+ fixed some error in distributional arithmetics brought up by Andrew Robinson <apro@unimelb.edu.au>
    to produce meaningful error messages we had code that tried to deparse operands in operations
	with restricted definition domains like "/", "^"; it turned our that our idea to catch errors
	in this deparsing within a try()-catch did not work any longer when called from within a function; 
	as way out, we now have code which no longer needs the try()-catch and instead climbs up the 
	parsing tree and searches for the first occurrence of "/" resp. "^" and deparses this
	... in the end this was more complicated than expected, as the parsing tree could give
	paste()-results of length > 1... (only popped up in a reverse dependency check through 
	package distrEllipse)

under the hood:
+ triggered by an email by Santhosh V <Santhosh.V@se.com>, we added a patch to be more careful when producing